2004-04-14  David Ayers  <d.ayers@inode.at>

	* gsweb.make.in: Remove GSANTLR dependency.
	* GSWExtensions.framework/Makefile.preamble: Ditto.
	* GSWExtensionsGSW.framework/Makefile.preamble: Ditto.
	
	* GSWeb.framework/Makefile.preamble.in: Move AUX_LIBS to the
	bottom so that the linker on Darwin can deal with the static
	library.

	* GSWExtensions.framework/GSWKeyValueConditional.h: Remove
	include currently redundant for the include mechanism and
	causing warnings to gswnames=wo.
	
2004-04-06   Manuel Guesdon <mguesdon@orange-concept.com>

	* GSWeb.framework/GSWHTMLRawParser.m:
		o fixed exception format/arguments problem reported 
			by David Ayers  <d.ayers@inode.at>
			in _skipQuotedStringWithQuote:index:stopIndex:
	* GSWeb.framework/GSWSession.m:
		o implemented -debugWithFormat:
		o implemented -_debugWithString:
		o Manage termination in -appendCookieToResponse:
	* GSWeb.framework/GSWResponse.m:
		o finalized -disableClientCaching
		o in -_finalizeInContext: add load info to headers
		o in -_finalizeInContext: new session refusing info
	* GSWeb.framework/GSWAssociation.m:
		o raise exception if empty keyPath in +setValue:inObject:forKeyPath:
	* GSWeb.framework/GSWActionRequestHandler.m:
		o finalize -_handleRequest:
	* GSWeb.framework/GSWApplication.h/.m:
		o added -_refuseNewSessionsTimeInterval
		o added +_setAllowsCacheControlHeader:
		o added +_allowsCacheControlHeader
	* GSWeb.framework/GSWConstants.h/.m:
		o added GSWHTTPHeader_LoadAverage
		o added GSWHTTPHeader_RefuseSessions
		o added AllowsCacheControlHeader
	* GSWeb.framework/GSWConfig.h:
		o added GSWOPTVALUE_AllowsCacheControlHeader
	* TODO:
		o updated
	* GSWeb.framework/GSWElement.m:
		o remove -definitionName (use -declarationName now)
	* GSWeb.framework/GSWForm.m:
		o replaced -definitionName call by -declarationName
	* GSWeb.framework/GSWComponent.m/.h:
		o replaced -definitionName by -declarationName
	* GSWeb.framework/GSWComponentContent.m: